--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,3 @@
-html {
-  /* Die Schriftgrößen insbesondere in mobilen Browsern sollen nicht angepasst werden*/ 
-	-webkit-text-size-adjust: none; 
-	-moz-text-size-adjust: none; 
-	-ms-text-size-adjust: none; 
-  text-size-adjust: none;
-}
-
 /*Positionierung von Footer und Nav*/
 nav {
   margin-top: 0px;
@@ -16,7 +8,7 @@ footer {
 .content {
   /*Hiermit lässt sich der Footer richtig postionieren!
   min-height: 100vh; minus höhe des Footers
-  Damit der Footer am ende der Seite steht.
+  Damit der Footer am Ende der Seite steht.
   Der Footer steht hinter einem content div.*/
   min-height: calc(100vh - 96px);
 }
@@ -42,6 +34,7 @@ th { /*Keine fetten Tableheads*/
 }
 
 /*Zum Einbinden von iframes (Youtube etc)*/
+/*<div class="video-container">**Youtube-embedded**</div>*/
 .video-container {
   position: relative;
   padding-bottom: 56.25%;
@@ -65,9 +58,6 @@ th { /*Keine fetten Tableheads*/
 h1 {
   font-size:30px;
 }
-
-/*Grauer Text
-.w3-text-grey,.w3-hover-text-grey:hover,.w3-text-gray,.w3-hover-text-gray:hover{color:#949393!important}*/
 
 /*Links*/
 .w3-blue,.w3-hover-primary:hover{color:#ffffff!important;background-color:#6c7fbe!important}
