--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,7 +78,9 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
-
+td {
+  vertical-align: middle;
+}
 /*Links*/
 .w3-blue,.w3-hover-primary:hover{color:#ffffff!important;background-color:#6c7fbe!important}
 .w3-text-blue,.w3-hover-text-primary:hover{color:#6c7fbe!important}
