--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 /*Positionierung von Footer und Nav*/
 nav {
-  margin-top: 0px;
+  margin-top: 0;
 }
 footer {
   margin-bottom: 0;
@@ -22,7 +22,7 @@ th { /*Keine fetten Tableheads*/
 }
 
 td {
-  vertical-align : middle;
+  vertical-align: middle!important;
 }
 
 /*Positionierung der eingepflegten Icons von Google*/
