--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,6 +86,18 @@ input[type=number] {
 .w3-text-primary,.w3-hover-text-primary:hover{color:#6c7fbe!important}
 .w3-border-primary,.w3-hover-border-primary:hover{border-color:#6c7fbe!important}
 
+.w3-primary-2,.w3-hover-primary-2:hover{color:#000000!important;background-color: #a6b2d8 !important}
+.w3-text-primary-2,.w3-hover-text-primary-2:hover{color: #a6b2d8 !important}
+.w3-border-primary-2,.w3-hover-border-primary-2:hover{color: #a6b2d8!important}
+
+.w3-primary-3,.w3-hover-primary-3:hover{color:#000000!important;background-color:#cad0e8!important}
+.w3-text-primary-3,.w3-hover-text-primary-3:hover{color:#cad0e8!important}
+.w3-border-primary-3,.w3-hover-border-primary-3:hover{border-color:#cad0e8!important}
+/*$color[0] = "background-color: rgb(189, 148, 107);";*/
+/*$color[1] = "background-color: #a6b2d8;";*/
+/*$color[2] = "background-color: #b8c1e0;";*/
+/*$color[3] = "background-color: #cad0e8;";*/
+
 /*Sekundärfarbe*/
 .w3-secondary,.w3-hover-secondary:hover{color:#000000!important;background-color:#FB775C!important}
 .w3-text-secondary,.w3-hover-text-secondary:hover{color:#FB775C!important}
