--- a/public/css/style.css
+++ b/public/css/style.css
@@ -111,17 +111,15 @@ input[type=number] {
 .flex-container {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  justify-content: center;
+  gap: 20px;
+  padding: 15px 0;
 }
 
 .flex-item {
   width: 20%;
   min-height: 100px;
   min-width: 130px;
-  margin: 10px;
-  padding: 10px;
   text-align: center;
   display: flex;
   justify-content: center;
