--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,12 +100,18 @@ input[type=number] {
 .w3-text-tertiary,.w3-hover-text-tertiary:hover{color:#EAB42E!important}
 .w3-border-tertiary,.w3-hover-border-tertiary:hover{border-color:#EAB42E!important}
 
-.ehl-text-pink{color: #bd6b99!important}
-.ehl-text-red{color:#db756b!important}
-.ehl-text-orange{color:#bd946b!important}
-.ehl-text-yellow{color:#be9f4b!important}
-.ehl-text-green{color:#6bbd99!important}
-.ehl-text-blue{color:#6bb0bd!important}
+.ehl-pink,.ehl-hover-pink:hover{color:#ffffff;background-color:#bd6b99;}
+.ehl-text-pink,.ehl-hover-text-pink:hover{color:#bd6b99!important;}
+.ehl-red,.ehl-hover-red:hover{color:#ffffff;background-color:#db756b;}
+.ehl-text-red,.ehl-hover-text-red:hover{color:#db756b!important;}
+.ehl-orange,.ehl-hover-orange:hover{color:#ffffff;background-color:#bd946b;}
+.ehl-text-orange,.ehl-hover-text-orange:hover{color:#bd946b!important;}
+.ehl-yellow,.ehl-hover-yellow:hover{color:#ffffff;background-color:#be9f4b;}
+.ehl-text-yellow,.ehl-hover-text-yellow:hover{color:#be9f4b!important;}
+.ehl-green,.ehl-hover-green:hover{color:#ffffff;background-color:#6bbd99;}
+.ehl-text-green,.ehl-hover-text-green:hover{color:#6bbd99!important;}
+.ehl-blue,.ehl-hover-blue:hover{color:#ffffff;background-color:#6bb0bd;}
+.ehl-text-blue,.ehl-hover-text-blue:hover{color:#6bb0bd!important;}
 
 /* Grid-Darstellung in den Centern */
 .flex-container {
